k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omnigateway
spec:
  selector:
    app: omnigateway
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
